--- a/src/app/components/approval/leave/employee-leave-list/employee-leave-list.component.html
+++ b/src/app/components/approval/leave/employee-leave-list/employee-leave-list.component.html
@@ -65,6 +65,16 @@
                   <div class="row">
                     <div class="col-md-3">
                       <div class="form-group">
+                        <label>ประเภทการลา</label>
+                        <div class="p-md-10 ui-fluid">
+                          <p-dropdown [options]="leaves" placeholder="-------- ทั้งหมด --------" [showClear]="true"
+                            [filter]='true' [(ngModel)]="leave">
+                          </p-dropdown>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="form-group">
                         <label>วันที่ลา (From)</label>
                         <div class="p-grid ui-fluid">
                           <p-calendar [(ngModel)]="empleaveDateFrom" [showIcon]="true" [placeholder]="'dd/mm/yyyy'"
@@ -121,25 +131,33 @@
                         #
                         <p-sortIcon [field]="'no'"></p-sortIcon>
                       </th>
-                      <th class="text-center" [pSortableColumn]="'room_name'" pResizableColumn pReorderableColumn>
+                      <th class="text-center" [pSortableColumn]="'emp_code'" pResizableColumn pReorderableColumn>
                         รหัสพนักงาน
-                        <p-sortIcon [field]="'room_name'"></p-sortIcon>
+                        <p-sortIcon [field]="'emp_code'"></p-sortIcon>
                       </th>
-                      <th class="text-center" [pSortableColumn]="'time_start'" pResizableColumn pReorderableColumn>
+                      <th class="text-center" [pSortableColumn]="'emp_name'" pResizableColumn pReorderableColumn>
                         ชื่อ - สกุล
-                        <p-sortIcon [field]="'time_start'"></p-sortIcon>
+                        <p-sortIcon [field]="'emp_name'"></p-sortIcon>
                       </th>
-                      <th class="text-center" [pSortableColumn]="'person_total'" pResizableColumn pReorderableColumn>
+                      <th class="text-center" [pSortableColumn]="'depart_name'" pResizableColumn pReorderableColumn>
+                        แผนก
+                        <p-sortIcon [field]="'depart_name'"></p-sortIcon>
+                      </th>
+                      <th class="text-center" [pSortableColumn]="'leave_type'" pResizableColumn pReorderableColumn>
+                        ประเภทการลา
+                        <p-sortIcon [field]="'leave_type'"></p-sortIcon>
+                      </th>
+                      <th class="text-center" [pSortableColumn]="'leave_date'" pResizableColumn pReorderableColumn>
                         วันที่ - เวลา
-                        <p-sortIcon [field]="'person_total'"></p-sortIcon>
-                      </th>
-                      <th class="text-center" [pSortableColumn]="'sts_code'" pResizableColumn pReorderableColumn>
-                        สถานะอนุมัติ
-                        <p-sortIcon [field]="'sts_code'"></p-sortIcon>
+                        <p-sortIcon [field]="'leave_date'"></p-sortIcon>
                       </th>
                       <th class="text-center" [pSortableColumn]="'remark'" pResizableColumn pReorderableColumn>
                         เหตุผล
                         <p-sortIcon [field]="'remark'"></p-sortIcon>
+                      </th>
+                      <th class="text-center" [pSortableColumn]="'sts_text'" pResizableColumn pReorderableColumn>
+                        สถานะอนุมัติ
+                        <p-sortIcon [field]="'sts_text'"></p-sortIcon>
                       </th>
                       <th class="text-center" [pSortableColumn]="'action'" pResizableColumn pReorderableColumn>
                         Action
@@ -150,11 +168,13 @@
                   <ng-template pTemplate="colgroup" let-columns>
                     <colgroup>
                       <col [style.width]="'70px'">
-                      <col [style.width]="'150px'">
+                      <col [style.width]="'120px'">
                       <col [style.width]="'200px'">
                       <col [style.width]="'200px'">
                       <col [style.width]="'150px'">
-                      <col [style.width]="'200px'">
+                      <col [style.width]="'250px'">
+                      <col [style.width]="'300px'">
+                      <col [style.width]="'120px'">
                       <col [style.width]="'100px'">
                     </colgroup>
                   </ng-template>
@@ -163,23 +183,28 @@
                       <td class="text-center">
                         {{ rowData['no'] }}
                       </td>
-                      <td>
+                      <td class="text-center">
                         {{ rowData['emp_code'] }}
                       </td>
-                      <td class="text-center">
+                      <td>
                         {{ rowData['emp_name'] }}
                       </td>
+                      <td class="text-center">
+                        {{ rowData['depart_name'] }}
+                      </td>
+                      <td class="text-center">
+                        {{ rowData['leave_type'] }}
+                      </td>
                       <td>
-                        {{ rowData['leave_start'] | date: 'dd/MM/yyyy' }} - {{ rowData['leave_stop'] | date: 'dd/MM/yyyy'
-                        }}
+                        {{ rowData['leave_date'] }}
+                      </td>
+                      <td>
+                        {{ rowData['remark'] }}
                       </td>
                       <td class="text-center">
                         <span class="badge" [style.background-color]="rowData.sts_color">
                           {{ rowData['sts_text'] }}
                         </span>
-                      </td>
-                      <td>
-                        {{ rowData['remark'] }}
                       </td>
                       <td class="text-center">
                         <button type="button" class="btn btn-info btn-sm" (click)="empLeave(rowData['id'])">
