--- a/src/app/components/approval/leave/employee-leave-list/employee-leave-list.component.html
+++ b/src/app/components/approval/leave/employee-leave-list/employee-leave-list.component.html
@@ -115,10 +115,10 @@
           <div class="card-header">
             <h4 class="card-title" id="basic-layout-form">ผลการค้นหา</h4>
             <div class="heading-elements mt-0">
-              <button type="button" class="btn btn-success" (click)="empLeave('ADD')">
+              <button type="button" class="btn btn-success" (click)="openRemarkEmpLeave('Approve')">
                 <i class="ft-check"></i> Approve</button>
               <label>&nbsp;</label>
-              <button type="button" class="btn btn-warning" (click)="empLeave('ADD')">
+              <button type="button" class="btn btn-warning" (click)="openRemarkEmpLeave('Reject')">
                 <i class="ft-x"></i> Reject</button>
             </div>
           </div>
@@ -233,3 +233,25 @@
 
   </section>
 </div>
+
+<p-dialog [(visible)]="modalConfirm" [position]="'top'" [modal]="true" [style]="{width: '30vw',minWidth:'550px'}"
+  [baseZIndex]="10000" [draggable]="false" [resizable]="false">
+  <div class="modal-body">
+    <label>เหตุผล</label>
+    <textarea class="form-control" id="reasonCancel" rows="6" placeholder="" [(ngModel)]="submitRemark"></textarea>
+  </div>
+  <p-footer>
+    <fieldset class="form-group position-relative has-icon-left mb-0">
+      <button type="button" id="edit-contact-item" class="btn btn-success edit-contact-item" data-dismiss="modal"
+        (click)="saveCheckAll()">
+        <i class="fa fa-paper-plane-o d-lg-none"></i>
+        <span class="  d-lg-block">ตกลง</span>
+      </button>
+      <button type="button" id="edit-contact-item" class="btn btn-danger edit-contact-item" data-dismiss="modal"
+        (click)="closeRemarkEmpLeave()">
+        <i class="fa fa-paper-plane-o d-lg-none"></i>
+        <span class="d-none d-lg-block">ยกเลิก</span>
+      </button>
+    </fieldset>
+  </p-footer>
+</p-dialog>
